# easy-batch-prompting

./: .gitignore  LICENSE  README.md  RELEASING.md  SCHEMA.md  aieasybatch.py  conftest.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
examples/: batch.json  prompts.txt  roster.json
js/: README.md  index.d.ts  package.json
js/src/: cli.js  core.js  http.js  index.js  prompts.js  record.js  registry.js  roster.js  usage.js
js/src/providers/: anthropic.js  gemini.js  mock.js  openaiCompat.js
js/test/: core.test.js  customid.test.js
src/aieasybatch/: __init__.py  cli.py  core.py  lock.py  prompts.py  record.py  registry.py  roster.py  usage.py
src/aieasybatch/bridge/: __init__.py  anthropic_batch.py  cli.py  common.py  openai_batch.py
src/aieasybatch/providers/: __init__.py  anthropic.py  base.py  gemini.py  http.py  mock.py  openai_compat.py
src/aieasybatch/viewer/: __init__.py  template.html
tests/: test_bridge.py  test_cli_help.py  test_core_mock.py  test_cross_lang.py  test_live.py  test_lock.py  test_no_third_party_imports.py  test_providers.py  test_single_file.py  test_viewer.py
tests/fixtures/: custom_ids.json
tools/: build_single.py
web/: app.js  index.html  manifest.webmanifest  style.css  sw.js
